tex preview overflow bug fixed, removed lingering table headers from scrape

--- a/client/static/style.css
+++ b/client/static/style.css
@@ -210,6 +210,7 @@ textarea:focus {
     background-color: var(--my-white);
     border: 0.3rem solid var(--my-blue);
     min-width: 60%;
+    max-width:60%;
     max-height: 50%;
     display: grid;
     grid-template-columns: 2fr 1fr;
@@ -290,12 +291,15 @@ textarea:focus {
 #search-preview h2 { margin: 0; }
 
 #tex-preview {
+    overflow: hidden;
     border: 2px solid var(--my-lighter-gray);
     background-color: var(--my-white);
     color: var(--my-black);
-    font-size: clamp(1rem, 3rem, 4rem);
+    font-size: 1rem;
     width: 70%;
+    max-width: 70%;
     height: 80%;
+    max-height: 80%;
     font-family:  "EB Garamond", serif;
     display: flex; justify-content: center; align-items: center;
 }
